--- a/src/pages/help.css
+++ b/src/pages/help.css
@@ -98,3 +98,29 @@ border-top: 2px white solid;
     height: 250px;
    
   }
+
+  .vinyls_h1{
+text-align: center;
+    margin-top: 20px;
+    font-family: Arial; 
+    font-size: 35px; 
+    COLOR: #1278BF; 
+    text-shadow: 0px 0px 9px #508AD3;
+  }
+
+  .vinyls_totalItem{
+    
+    
+    color: aliceblue;
+    
+    
+    font-size: 15px;
+    
+    margin-top: 12px;
+    margin-left: 15PX;
+    
+  }
+
+  .buyvinyls_h2{
+    margin-top: 13px;
+  }
